add react-router and modify names and node version of item-mock-API

--- a/item-mock-API/package.json
+++ b/item-mock-API/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "17"
+  },
   "scripts": {
     "start": "nodemon itemAPI.js"
   },
