--- a/item-mock-API/package.json
+++ b/item-mock-API/package.json
@@ -8,7 +8,7 @@
     "node": "17"
   },
   "scripts": {
-    "start": "nodemon itemAPI.js"
+    "start": "nodemon ./src/itemAPI.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,9 @@
   "dependencies": {
     "@types/node": "^18.11.9",
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
