--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .ts,.js,.tsx",
-    "lint:fix": "eslint ./src --fix --ext .ts,.js,.tsx"
+    "lint:fix": "eslint ./src --fix --ext .ts,.js,.tsx",
+    "compile": "tsc --noEmit --skipLibCheck"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +60,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "typescript": "^4.8.4"
   },
   "husky": {
     "hooks": {
