--- a/package.json
+++ b/package.json
@@ -67,6 +67,11 @@
     "@types/react-dom": "^18.0.8",
     "typescript": "^4.8.4"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
